# Habits_tracker

./: .env_sample  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_complete_time.py  0004_alter_habit_action_alter_habit_complete_time_and_more.py
users/: models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py
